Changes to be committed: 	new file:   images/Norse.otf 	new file:   images/NorseBold-2Kge.otf 	new file:   images/misc/freefont_EULA_1-3.txt -- Adding fonts to suit the theme
	modified:   images/styles.css
	modified:   index.html
	modified:   recipes/grilled-cheese.html
	modified:   recipes/lasagne.html
	modified:   recipes/spaghetti-bolognaise.html

-- Minor tweaks to the CSS to make it look a little nicer and brush off the rust from my CSS skills.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="./images/odin.jpg">
+    <img src="./images/odin.jpg" width="450px">
     <p>A simple recipes page just to get back in the groove of basic HTML </p>
     <ul>
         <li><a href="./recipes/lasagne.html">Lasagne</a></li>
