--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <h1>Grilled Cheese</h1>
-    <img src ="../images/GrilledCheese.jpeg">
+    <img src ="../images/GrilledCheese.jpeg" width="450px">
     <hr>
     <h2>Description</h2>
     <p>This is an adaptation of the official Grilled Cheese from the local Grilled Cheese truck</p>
     <h2>Ingredients</h2>
-    <ul>
+    <div class="container">
+    <ul class="recipeUL">
         <li>1 tablespoon of Mayo</li>
         <li>2 slices crusty continental bread</li>
         <li>2 slices of cheese</li>
@@ -22,10 +23,14 @@
     </ul>
     <br>
     <h2>Steps</h2>
-    <ol>
+    <ol class="recipeOL">
         <li>SPREAD one slice of bread with mayonnaise. Place bread Mayonnaise-side-down into hot skillet; add cheese.</li>
+        <br>
         <li>SPREAD other slice of bread with Mayonnaise and place Mayonnaise-side-up on top of cheese.</li>
+        <br>
         <li>COOK until lightly browned on one side. Flip over and cook until cheese is melted.</li>
     </ol>
+    </div>
+    <a href="../index.html" class="nav">Return to Odin</a>
 </body>
 </html>
