--- a/recipes/spaghetti-bolognaise.html
+++ b/recipes/spaghetti-bolognaise.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <h1>Spaghetti Bolognaise</h1>
-    <img src ="../images/SpaghettiBolognaise.jpeg">
+    <img src ="../images/SpaghettiBolognaise.jpeg" width="450px">>
     <hr>
     <h2>Description</h2>
     <p>Instead of pasta with beef, try chicken instead...healthier and tastier!!</p>
+    <div class="container">
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="recipeUL">
        <li>1 tablespoon vegetable oil</li>
        <li>3 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
        <li>1 white onion, chopped</li>
@@ -28,9 +29,11 @@
     </ul>
     <br>
     <h2>Steps</h2>
-    <ol>
+    <ol class="recipeOL">
         <li>Heat oil in a large skillet over medium heat. Add chicken, onion and garlic; saute until chicken is mostly cooked through, about 10 minutes. Stir in the crushed tomatoes, mushrooms and Italian seasoning. Cook for about 5 minutes, stirring frequently.</li>
-        <li>SReduce heat and stir in the sugar. Simmer for at least 15 minutes. Meanwhile, bring a large pot of lightly salted water to a boil; add rotini pasta and cook until al dente. Drain and serve topped with the chicken mixture and grated Parmesan cheese.</li>
+        <br>
+        <li>Reduce heat and stir in the sugar. Simmer for at least 15 minutes. Meanwhile, bring a large pot of lightly salted water to a boil; add rotini pasta and cook until al dente. Drain and serve topped with the chicken mixture and grated Parmesan cheese.</li>
     </ol>
+    <a href="../index.html" class="nav">Return to Odin</a>
 </body>
 </html>
